# ImageComparison

./: .travis.yml  CMakeLists.txt  README.md
src/: CMakeLists.txt  CSVParser.cpp  CSVParser.h  CSVWritter.h  CommandLineArgParser.cpp  CommandLineArgParser.h  CommandLineArgs.cpp  CommandLineArgs.h  CommandLineArgsParser.cpp  CommandLineArgsParser.h  InputCSVData.cpp  InputCSVData.h  OutputCSVData.cpp  OutputCSVData.h  main.cpp
src/Program/: CMakeLists.txt  Program.cpp  Program.h
src/commandLineArgs/: CMakeLists.txt  CommandLineArgs.cpp  CommandLineArgs.h  CommandLineArgsParser.cpp  CommandLineArgsParser.h
src/csv/: CMakeLists.txt  CSVParser.cpp  CSVParser.h  CSVWriter.cpp  CSVWriter.h  InputCSVData.cpp  InputCSVData.h  OutputCSVData.cpp  OutputCSVData.h
src/mainProgram/: CMakeLists.txt  mainProgram.cpp  mainProgram.h
src/simularityGenerator/: CMakeLists.txt  simularityEngine.cpp  simularityEngine.h  simularityGenerator.h
test/: CMakeLists.txt  CSVParserTests.cpp  CommandLineArgsParserTests.cpp  CommandLineArgsParser_fail.cpp  CommandLineArgsParser_success.cpp
test/commandLineArgTests/: CMakeLists.txt  CommandLineArgsParserTests.cpp
test/csvUtilsTests/: CMakeLists.txt  CSVParserTests.cpp  CSVWriterTests.cpp
test/simularityEngineTests/: CMakeLists.txt  simularityEngineTests.cpp
test/testFiles/: images.csv  imagesSame.csv  imagesWrong.csv
tests/: CMakeLists.txt
